force-app/main/default/objects/Agent_Group__c/fields/Active_Leave__c.field-meta.xml
<CustomField>
    <fullName>Active_Leave__c</fullName>
    <label>Active Leave</label>
    <summaryFilterItems>
        <field>WelcomeCall_Leave__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WelcomeCall_Leave__c.WelcomeCall_Agent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>