force-app/main/default/objects/Agent_Group__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Agent_Group__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <filterItems>
            <field>Agent_Group__c.WelcomeCall_Resign__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agent_Group__c</referenceTo>
    <relationshipLabel>Agent Group</relationshipLabel>
    <relationshipName>Agent</relationshipName>
    <type>Lookup</type>
</CustomField>