force-app/main/default/objects/Agent_Group__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>IF( RecordType.DeveloperName != &apos;Agent&apos;,  
IF( (Agent__r.WelcomeCall_Resign__c) , false, IF( Agent__r.Active_Leave__c == 0 , true, false)) , 
IF( WelcomeCall_Resign__c , false ,IF( Active_Leave__c == 0 , true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>