force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Assignment__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment</label>
    <type>Checkbox</type>
</CustomField>