force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Fg_Head__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Head</label>
    <type>Checkbox</type>
</CustomField>