force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Group__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>WelcomeCall_Group__c</referenceTo>
    <relationshipLabel>Agent Group</relationshipLabel>
    <relationshipName>Agent_Group</relationshipName>
    <type>Lookup</type>
</CustomField>