force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Priority__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Priority__c</fullName>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>