force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Resign__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Resign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resign</label>
    <type>Checkbox</type>
</CustomField>