force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor</label>
    <type>Checkbox</type>
</CustomField>