force-app/main/default/objects/Agent_Group__c/fields/WelcomeCall_User__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agent_Group</relationshipName>
    <type>Lookup</type>
</CustomField>